--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body{
 
 /* TODO PARA EL FORMULARIO */
 
+    .parsley-destinohora{
+        color: #e0e0e0;
+        font-size: 11px;
+    }
     .conteneazul{
         background-color: rgba(15,23,38,.6);
         padding: 60px 0px 55px 21px;
